fixed spacing between icons

--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -79,7 +79,7 @@ img {
   padding: 0;
   display: inline;
   margin-left: 0 !important;
-  margin-right: 0 !important;
+  margin-right: -7px !important;
 
   li {
     line-height: 40px;
